Clean EVCS_API_UPDATES feature flag.